--- a/sgw_example.ipynb
+++ b/sgw_example.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -249,13 +249,13 @@
     "    ax = fig.add_subplot(gs[0,0], projection='3d')\n",
     "\n",
     "    X1=tab_obj[0]\n",
-    "    ax.scatter(X1[:,0],X1[:,2],X1[:,1], marker='o', s=20, c=\"goldenrod\", alpha=0.6)\n",
+    "    ax.scatter(X1[:,0],X1[:,2],X1[:,1], marker='o', s=20, c=\"green\", alpha=0.6)\n",
     "    ax.view_init(elev=10., azim=360)\n",
     "    ax.set_axis_off()\n",
     "\n",
     "    ax = fig.add_subplot(gs[0,1], projection='3d')\n",
     "    X2=tab_obj[i]\n",
-    "    ax.scatter(X2[:,0],X2[:,2],X2[:,1], marker='o', s=20, c=\"green\", alpha=0.6)\n",
+    "    ax.scatter(X2[:,0],X2[:,2],X2[:,1], marker='o', s=20, c=\"goldenrod\", alpha=0.6)\n",
     "    ax.view_init(elev=10., azim=360)\n",
     "    ax.set_axis_off()\n",
     "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -284,8 +284,17 @@
     "for filename in files:\n",
     "    images.append(imageio.imread(filename))\n",
     "    \n",
-    "imageio.mimsave('horse.gif', images,fps=2)"
+    "imageio.mimsave('horse.gif', images,fps=2.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
